[tool.poetry]
name = "voice-notes"
version = "0.1.0"
description = "Transcription service and Notion synchronization for Conrad."
authors = ["Conrad Stansbury <chstansbury@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.26"
tqdm = "^4.62.3"
notion-client = "^0.8.0"
requests = "^2.26.0"
notion = "^0.0.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
